[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/Enemies/boar.png" type="Texture" id=1]
[ext_resource path="res://sounds/tall_grass_footsteps.wav" type="AudioStream" id=2]
[ext_resource path="res://party_nodes/monster_party/BoarParty.gd" type="Script" id=3]
[ext_resource path="res://map_units/enemies/Boar.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.52679, 6.563 )

[node name="Boar" type="Area2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.717056, -0.945882 )
scale = Vector2( 0.124889, 0.136944 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PartyNode" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="WalkingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0

[connection signal="body_entered" from="." to="." method="_on_Boar_body_entered"]
